tests/fixtures/errors/assumes_on_const.gcl
// Error: #[assumes] on invalid declaration kind (const)
assert check = true;

#[assumes(check)]
const X: Dimensionless = 1.0;
